--- a/PicScramble/app/src/main/res/values/strings.xml
+++ b/PicScramble/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_text_gameView">Lets Play the Scramble</string>
     <string name="remaining_time">Remaining Time</string>
     <string name="secondsRemains">Seconds Remaning</string>
+    <string name="congrets" formatted="false">Congratulations you have finish the game in %d seconds</string>
 </resources>
